j--/tests/pass/Euler.java
package pass;

public class Euler {
    
    private double method(){
        float f = 1e23f;
        double d = 1e2d;
        f = 20e-3;
        f = 1e+2;
        f = 0e-3f;
    }
}
