j--/tests/fail/Euler.java
public class Euler {
    private double method() {
        float f = 1e;
        double d = 1e-d;
        f = 0ef;
        f = 0e3;
    }
}
